crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__tagged_enum_equality_with_impl.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
1
1
1
1
