crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__template_legacy_parentheses_syntax.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PARSE-001] Error: failed to parse source: template syntax was removed; use `generic Name[T, ...] { ... }` instead
