crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__template_linked_list_i32.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
3
1
2
2
1
0
