crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__template_linked_list_v2_i32.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
0
0
3
0
0
2
1
2
99
2
0
2
5
3
3
3
2
3
2
0
5
