crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__template_missing_primary_type.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-RESOLVE-001] Error: failed to resolve/type-check program: generic Bad must define a primary type named Bad
