crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__todo_struct.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
---
COMPILATION ERROR

Compilation of QBE IR to assembly failed: qbe:/var/folders/_p/sxbwvhbn2616zrnxntrthkyw0000gn/T/.tmpA7Q7Er/target/oac/ir.qbe:45: invalid type for second operand %.L_field_offset_a_019928bb83e07591bd2e0fb6249a8ceb in storew
