crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__trait_operator_custom_impls.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
7
2
1
1
1
1
1
1
