crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__while_print.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
0
1
2
3
4
5
6
7
8
9
